--- a/css/login.less
+++ b/css/login.less
@@ -86,6 +86,18 @@ body {
     transition-timing-function: ease-in-put;
     font-weight: 200;
   }
+
+  p {
+    text-align: center;
+  }
+
+  .success {
+    color: #fff;
+  }
+
+  .error {
+    color: #ff4000;
+  }
 }
 
 form {
