--- a/css/login.less
+++ b/css/login.less
@@ -14,7 +14,7 @@
   font-weight: 300;
 }
 
-html,body {
+html, body {
   .full-height();
 }
 
@@ -91,12 +91,15 @@ body {
     text-align: center;
   }
 
-  .success {
-    color: #fff;
-  }
+  .info {
 
-  .error {
-    color: #ff4000;
+    .success {
+      color: #eee;
+    }
+
+    .error {
+      color: #CE4F45;
+    }
   }
 }
 
