--- a/css/admin.less
+++ b/css/admin.less
@@ -9,11 +9,8 @@
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  ul {
-    margin-left: 3em;
-    li {
-      padding: 15px 10px;
-    }
+  .navbar-brand {
+    margin-left: 2em;
   }
 }
 
@@ -44,6 +41,20 @@
   padding-top: 2em;
   h2 {
     text-align: center;
+  }
+  .notify {
+    text-align: center;
+    & > p {
+      margin: 10px auto;
+    }
+    .success {
+      display: none;
+      color: @success;
+    }
+    .error {
+      display: none;
+      color: @danger;
+    }
   }
 }
 
