--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,9 @@
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #fff;
+  background-color: #2196f3;
+}
 .navbar {
   margin-bottom: 0;
   -webkit-border-radius: 0;
@@ -6,6 +12,13 @@
 }
 .navbar .navbar-brand {
   margin-left: 2em;
+}
+.navbar span[data-lang="now"] {
+  text-transform: capitalize;
+}
+.navbar .dropdown-menu > li > a:hover {
+  color: #fff;
+  background-color: #2196f3;
 }
 .sidebar {
   padding: 0;
