--- a/css/admin.less
+++ b/css/admin.less
@@ -4,6 +4,11 @@
 @warning: #f0ad4e;
 @danger: #d9534f;
 
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  color: #fff;
+  background-color: #2196f3;
+}
+
 .navbar {
   margin-bottom: 0;
   -webkit-border-radius: 0;
@@ -12,6 +17,16 @@
   .navbar-brand {
     margin-left: 2em;
   }
+
+  span[data-lang="now"] {
+    text-transform: capitalize;
+  }
+
+  .dropdown-menu > li > a:hover {
+    color: #fff;
+    background-color: #2196f3;
+  }
+
 }
 
 .sidebar {
